k8s/apps/gha-cache-server/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gha-cache-server
  namespace: arc-systems
spec:
  hostnames:
    - gha-cache-server.local.walnuts.dev
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - kind: Service
          name: gha-cache-server-github-actions-cache-server
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        backendRequest: 0s
        request: 0s
